objects/PMC_CPQ_IntegrationSettings__mdt.object
<CustomObject>
    <description>This contains settings with respect to Integration.</description>
    <fields>
        <fullName>PMC_CPQ_Description__c</fullName>
        <description>Provides a description of a particular record in custom metadata.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SettingName__c</fullName>
        <description>This will contain the name of the setting.</description>
        <label>Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SettingTwoValueNumber_c__c</fullName>
        <label>PMC_CPQ_SettingTwoValueNumber__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SettingValueLongTextArea__c</fullName>
        <description>This is to store setting values that store long text area values.</description>
        <label>Setting Value Long Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SettingValueNumber__c</fullName>
        <description>This is to store setting values that are in number format.</description>
        <label>Setting Value Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PMC CPQ Integration Settings</label>
    <pluralLabel>PMC CPQ Integration Settings</pluralLabel>
</CustomObject>